--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="banner-left">
             <h1 class="heading">Conmebol <br> Copa America <br> 2021</h1>
             <div class="button">
-                <a href="">Watch Live <i class="fas fa-arrow-right"></i></a>
+                <a href="#">Watch Live <i class="fas fa-arrow-right"></i></a>
             </div>
         </div>
         <div class="banner-right">
@@ -172,10 +172,10 @@
             <img src="images/Logo.png" alt="">
         </div>
         <div class="social-icon">
-            <a href=""><i class="fab fa-instagram"></i></a>
-            <a href=""><i class="fab fa-facebook-f"></i></a>
-            <a href=""><i class="fab fa-twitter"></i></a>
-            <a href=""><i class="fab fa-youtube"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
         <div class="copyright">
             <p>Copyright &copy; 2022 Football</p>
